(lang dune 3.12)

(name aoc2023_ocaml)

(generate_opam_files true)

(source
 (github davkk/aoc2023_ocaml))

(authors "Dawid Karpinski")

(maintainers "Dawid Karpinski")

(package
 (name aoc2023_ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune base str)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
